--- a/src/index.html
+++ b/src/index.html
@@ -85,5 +85,23 @@
         </div>
       </div>
     </div>
+    <div class="consultation">
+      <div class="container">
+        <h2 class="title title_left">
+          Получите бесплатную консультацию<br />
+          по подбору пульсометра
+        </h2>
+        <div class="consultation__descr">
+          Просто заполните форму заявки<br />
+          и мы перезвоним вам в течении 10 минут
+        </div>
+        <form class="feed-form" action="#">
+          <input name="name" required placeholder="Your name" type="text" />
+          <input name="phone" required placeholder="Your phone" type="tel" />
+          <input name="email" required placeholder="Your e-mail" type="email" />
+          <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
